Fix overflow scroll bug

--- a/coreci-web/app/style.less
+++ b/coreci-web/app/style.less
@@ -1,6 +1,10 @@
 @import "../node_modules/bootstrap/less/bootstrap";
 @icon-font-path: "/app/fonts/";
 
+.container {
+  overflow-x: hidden;
+}
+
 .column-icon {
   box-sizing: content-box;
   width: 16px;
